--- a/src/components/observe.html
+++ b/src/components/observe.html
@@ -82,5 +82,16 @@
   data.part.push(3)
 
 
+  let m = {
+    a: 12,
+    b: 3,
+    c: 9
+  }
+  with (m) {
+    console.log(a)
+    console.log(b)
+    console.log(c)
+  }
+
 </script>
 </html>
