--- a/src/components/cssTest.html
+++ b/src/components/cssTest.html
@@ -9,10 +9,10 @@
       /*position: relative;*/
       width: 500px;
       height: 500px;
-      /*display: flex;*/
-      /*justify-content: center;*/
-      /*align-items: center;*/
-      display: grid;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /*display: grid;*/
       /*display: table-cell;*/
       /*text-align: center;*/
       /*vertical-align: middle;*/
@@ -38,8 +38,8 @@
       /*top: calc(50% - 150px);*/
       /*left: calc(50% - 150px);*/
       /*transform: translate(-50%, -50%);*/
-      align-self: center;
-      justify-self: center;
+      /*align-self: center;*/
+      /*justify-self: center;*/
     }
   </style>
 </head>
